<resources>
    <string name="app_name">Geometric Image</string>
    <string name="colors">Colors</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="title_seekbar_altPi">Alteration of Pi</string>
    <string name="title_seekbar_countDetails">Count details</string>
    <string name="title_seekbar_strokeWidth">Line width</string>
    <string name="color_red">R</string>
    <string name="color_green">G</string>
    <string name="color_blue">B</string>
    <string name="ok">Ok</string>
    <string name="open_mage">Open</string>
    <string name="text_for_btn_line">Line</string>
    <string name="text_for_btn_background">Background</string>
    <string name="text_for_btn_save_png">Save to PNG</string>
    <string name="text_for_btn_save_jpg80">Save to JPG 80%</string>
    <string name="text_for_btn_save_jpg90">Save to JPG 90%</string>
    <string name="text_for_btn_save_jpg100">Save to JPG 100%</string>
    <string name="permission_error">Saving is not possible. Missing permission.</string>
    <string name="saving_image">Image saved. Open your file? </string>
</resources>
