<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colors_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/colorLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/text_for_btn_line"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/text_for_btn_background"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleColorR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="50dp"
        android:text="@string/color_red"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/colorR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        android:max="255"
        android:progress="255" />

    <TextView
        android:id="@+id/titleColorG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="105dp"
        android:text="@string/color_green"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/colorG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="50dp"
        android:max="255"
        android:progress="0" />

    <TextView
        android:id="@+id/titleColorB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="160dp"
        android:text="@string/color_blue"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/colorB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="185dp"
        android:layout_marginRight="50dp"
        android:max="255"
        android:progress="106" />

    <FrameLayout
        android:id="@+id/pallete"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorAccent">

    </FrameLayout>

    <Button
        android:id="@+id/selectColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="106dp"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@android:color/white" />


</RelativeLayout>