<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/titleSeekBarAltPi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/title_seekbar_altPi"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/altPi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        android:max="20"
        android:progress="16" />

    <TextView
        android:id="@+id/titleSeekBarCountDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="130dp"
        android:text="@string/title_seekbar_countDetails"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/countDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="155dp"
        android:layout_marginRight="50dp"
        android:max="30"
        android:progress="20" />

    <TextView
        android:id="@+id/titleSeekBarStrokeWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="210dp"
        android:text="@string/title_seekbar_strokeWidth"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/strokeWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="235dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="106dp"
        android:max="5"
        android:progress="1" />


</RelativeLayout>